cmake_minimum_required(VERSION 3.5)
project(indri)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    antlr/include/antlr/ANTLRException.hpp
    antlr/include/antlr/ANTLRUtil.hpp
    antlr/include/antlr/AST.hpp
    antlr/include/antlr/ASTArray.hpp
    antlr/include/antlr/ASTFactory.hpp
    antlr/include/antlr/ASTNULLType.hpp
    antlr/include/antlr/ASTPair.hpp
    antlr/include/antlr/ASTRefCount.hpp
    antlr/include/antlr/BaseAST.hpp
    antlr/include/antlr/BitSet.hpp
    antlr/include/antlr/CharBuffer.hpp
    antlr/include/antlr/CharInputBuffer.hpp
    antlr/include/antlr/CharScanner.hpp
    antlr/include/antlr/CharStreamException.hpp
    antlr/include/antlr/CharStreamIOException.hpp
    antlr/include/antlr/CircularQueue.hpp
    antlr/include/antlr/CommonAST.hpp
    antlr/include/antlr/CommonASTWithHiddenTokens.hpp
    antlr/include/antlr/CommonHiddenStreamToken.hpp
    antlr/include/antlr/CommonToken.hpp
    antlr/include/antlr/config.hpp
    antlr/include/antlr/InputBuffer.hpp
    antlr/include/antlr/IOException.hpp
    antlr/include/antlr/LexerSharedInputState.hpp
    antlr/include/antlr/LLkParser.hpp
    antlr/include/antlr/MismatchedCharException.hpp
    antlr/include/antlr/MismatchedTokenException.hpp
    antlr/include/antlr/NoViableAltException.hpp
    antlr/include/antlr/NoViableAltForCharException.hpp
    antlr/include/antlr/Parser.hpp
    antlr/include/antlr/ParserSharedInputState.hpp
    antlr/include/antlr/RecognitionException.hpp
    antlr/include/antlr/RefCount.hpp
    antlr/include/antlr/SemanticException.hpp
    antlr/include/antlr/String.hpp
    antlr/include/antlr/Token.hpp
    antlr/include/antlr/TokenBuffer.hpp
    antlr/include/antlr/TokenStream.hpp
    antlr/include/antlr/TokenStreamBasicFilter.hpp
    antlr/include/antlr/TokenStreamException.hpp
    antlr/include/antlr/TokenStreamHiddenTokenFilter.hpp
    antlr/include/antlr/TokenStreamIOException.hpp
    antlr/include/antlr/TokenStreamRecognitionException.hpp
    antlr/include/antlr/TokenStreamRetryException.hpp
    antlr/include/antlr/TokenStreamSelector.hpp
    antlr/include/antlr/TreeParser.hpp
    antlr/include/antlr/TreeParserSharedInputState.hpp
    antlr/src/antlrParser.cpp
    antlr/src/ANTLRUtil.cpp
    antlr/src/ASTFactory.cpp
    antlr/src/ASTNULLType.cpp
    antlr/src/ASTRefCount.cpp
    antlr/src/BaseAST.cpp
    antlr/src/BitSet.cpp
    antlr/src/CharBuffer.cpp
    antlr/src/CharScanner.cpp
    antlr/src/CommonAST.cpp
    antlr/src/CommonASTWithHiddenTokens.cpp
    antlr/src/CommonHiddenStreamToken.cpp
    antlr/src/CommonToken.cpp
    antlr/src/InputBuffer.cpp
    antlr/src/LLkParser.cpp
    antlr/src/MismatchedCharException.cpp
    antlr/src/MismatchedTokenException.cpp
    antlr/src/NoViableAltException.cpp
    antlr/src/NoViableAltForCharException.cpp
    antlr/src/RecognitionException.cpp
    antlr/src/String.cpp
    antlr/src/Token.cpp
    antlr/src/TokenBuffer.cpp
    antlr/src/TokenStreamBasicFilter.cpp
    antlr/src/TokenStreamHiddenTokenFilter.cpp
    antlr/src/TokenStreamSelector.cpp
    antlr/src/TreeParser.cpp
    include/indri/AnchorTextAnnotator.hpp
    include/indri/AnchorTextHarvester.hpp
    include/indri/AnchorTextWriter.hpp
    include/indri/Annotator.hpp
    include/indri/Appliers.hpp
    include/indri/Arabic_Stemmer_utf8.hpp
    include/indri/ArabicStemmerTransformation.hpp
    include/indri/atomic.hpp
    include/indri/AttributeValuePair.hpp
    include/indri/BeliefNode.hpp
    include/indri/BooleanAndNode.hpp
    include/indri/Buffer.hpp
    include/indri/BulkTree.hpp
    include/indri/CachedFrequencyBeliefNode.hpp
    include/indri/Collection.hpp
    include/indri/CombinedVocabularyIterator.hpp
    include/indri/Combiner.hpp
    include/indri/CompressedCollection.hpp
    include/indri/ConditionVariable.hpp
    include/indri/Conflater.hpp
    include/indri/ConflationPattern.hpp
    include/indri/ContextCountAccumulator.hpp
    include/indri/ContextCountGraphCopier.hpp
    include/indri/ContextCountGraphExtractor.hpp
    include/indri/ContextInclusionAndNode.hpp
    include/indri/ContextSimpleCountAccumulator.hpp
    include/indri/ContextSimpleCountCollectorCopier.hpp
    include/indri/Copier.hpp
    include/indri/CorpusStatistics.hpp
    include/indri/DagCopier.hpp
    include/indri/DateFieldAnnotator.hpp
    include/indri/DateParse.hpp
    include/indri/delete_range.hpp
    include/indri/DeletedDocumentList.hpp
    include/indri/DirectoryIterator.hpp
    include/indri/DirichletTermScoreFunction.hpp
    include/indri/DiskDocExtentListIterator.hpp
    include/indri/DiskDocListFileIterator.hpp
    include/indri/DiskDocListIterator.hpp
    include/indri/DiskDocumentDataIterator.hpp
    include/indri/DiskFrequentVocabularyIterator.hpp
    include/indri/DiskIndex.hpp
    include/indri/DiskKeyfileVocabularyIterator.hpp
    include/indri/DiskTermData.hpp
    include/indri/DiskTermListFileIterator.hpp
    include/indri/DocExtentListIterator.hpp
    include/indri/DocExtentListMemoryBuilder.hpp
    include/indri/DocListFileIterator.hpp
    include/indri/DocListIterator.hpp
    include/indri/DocListIteratorNode.hpp
    include/indri/DocListMemoryBuilder.hpp
    include/indri/DocumentCount.hpp
    include/indri/DocumentData.hpp
    include/indri/DocumentDataIterator.hpp
    include/indri/DocumentIterator.hpp
    include/indri/DocumentIteratorFactory.hpp
    include/indri/DocumentStructure.hpp
    include/indri/DocumentStructureHolderNode.hpp
    include/indri/DocumentVector.hpp
    include/indri/EvaluatorNode.hpp
    include/indri/Extent.hpp
    include/indri/ExtentAndNode.hpp
    include/indri/ExtentChildNode.hpp
    include/indri/ExtentDescendantNode.hpp
    include/indri/ExtentEnforcementNode.hpp
    include/indri/ExtentInsideNode.hpp
    include/indri/ExtentOrNode.hpp
    include/indri/ExtentParentNode.hpp
    include/indri/ExtentRestrictionModelAnnotatorCopier.hpp
    include/indri/ExtentRestrictionNode.hpp
    include/indri/FieldBelowWalker.hpp
    include/indri/FieldBetweenNode.hpp
    include/indri/FieldEqualsNode.hpp
    include/indri/FieldExtent.hpp
    include/indri/FieldGreaterNode.hpp
    include/indri/FieldIteratorNode.hpp
    include/indri/FieldLessNode.hpp
    include/indri/FieldListIterator.hpp
    include/indri/FieldStatistics.hpp
    include/indri/FieldWildcardNode.hpp
    include/indri/File.hpp
    include/indri/FileClassEnvironment.hpp
    include/indri/FileClassEnvironmentFactory.hpp
    include/indri/FileTreeIterator.hpp
    include/indri/FilterNode.hpp
    include/indri/FilterRejectNode.hpp
    include/indri/FilterRequireNode.hpp
    include/indri/FixedPassageNode.hpp
    include/indri/FrequencyListCopier.hpp
    include/indri/HashTable.hpp
    include/indri/HTMLParser.hpp
    include/indri/Index.hpp
    include/indri/IndexEnvironment.hpp
    include/indri/IndexWriter.hpp
    include/indri/indri-platform.h
    include/indri/IndriParser.hpp
    include/indri/IndriTimer.hpp
    include/indri/IndriTokenizer.hpp
    include/indri/InferenceNetwork.hpp
    include/indri/InferenceNetworkBuilder.hpp
    include/indri/InferenceNetworkNode.hpp
    include/indri/InternalFileBuffer.hpp
    include/indri/JelinekMercerTermScoreFunction.hpp
    include/indri/KrovetzStemmer.hpp
    include/indri/KrovetzStemmerTransformation.hpp
    include/indri/LengthPriorNode.hpp
    include/indri/ListAccumulator.hpp
    include/indri/ListBeliefNode.hpp
    include/indri/ListCache.hpp
    include/indri/ListIteratorNode.hpp
    include/indri/LocalQueryServer.hpp
    include/indri/Lockable.hpp
    include/indri/MaxNode.hpp
    include/indri/MboxDocumentIterator.hpp
    include/indri/MemoryDocumentDataIterator.hpp
    include/indri/MemoryIndex.hpp
    include/indri/MemoryIndexDocListFileIterator.hpp
    include/indri/MemoryIndexTermListFileIterator.hpp
    include/indri/MemoryIndexVocabularyIterator.hpp
    include/indri/MetadataPair.hpp
    include/indri/Mutex.hpp
    include/indri/NestedExtentInsideNode.hpp
    include/indri/NestedListBeliefNode.hpp
    include/indri/NetworkListener.hpp
    include/indri/NetworkMessageStream.hpp
    include/indri/NetworkServerProxy.hpp
    include/indri/NetworkServerStub.hpp
    include/indri/NetworkStream.hpp
    include/indri/NexiLexer.hpp
    include/indri/NexiLexerTokenTypes.hpp
    include/indri/NexiParser.hpp
    include/indri/NormalDistribution.hpp
    include/indri/NormalizationTransformation.hpp
    include/indri/NotNode.hpp
    include/indri/NullListNode.hpp
    include/indri/NullScorerNode.hpp
    include/indri/NumericFieldAnnotator.hpp
    include/indri/ObjectHandler.hpp
    include/indri/OfficeHelper.hpp
    include/indri/OffsetAnnotationAnnotator.hpp
    include/indri/OffsetMetadataAnnotator.hpp
    include/indri/OrderedWindowNode.hpp
    include/indri/OrNode.hpp
    include/indri/Packer.hpp
    include/indri/PageRank.hpp
    include/indri/Parameters.hpp
    include/indri/ParsedDocument.hpp
    include/indri/ParserFactory.hpp
    include/indri/Path.hpp
    include/indri/PDFDocumentExtractor.hpp
    include/indri/PlusNode.hpp
    include/indri/PonteExpander.hpp
    include/indri/Porter_Stemmer.hpp
    include/indri/PorterStemmerTransformation.hpp
    include/indri/PowerPointDocumentExtractor.hpp
    include/indri/PriorFactory.hpp
    include/indri/PriorListIterator.hpp
    include/indri/PriorNode.hpp
    include/indri/QueryAnnotation.hpp
    include/indri/QueryEnvironment.hpp
    include/indri/QueryExpander.hpp
    include/indri/QueryLexer.hpp
    include/indri/QueryLexerTokenTypes.hpp
    include/indri/QueryParser.hpp
    include/indri/QueryParserFactory.hpp
    include/indri/QueryResponsePacker.hpp
    include/indri/QueryResponseUnpacker.hpp
    include/indri/QueryServer.hpp
    include/indri/QuerySpec.hpp
    include/indri/QueryStopper.hpp
    include/indri/QueryTFWalker.hpp
    include/indri/RawScorerNodeExtractor.hpp
    include/indri/RawTextParser.hpp
    include/indri/ReaderLockable.hpp
    include/indri/ReadersWritersLock.hpp
    include/indri/ref_ptr.hpp
    include/indri/ReformulateQuery.hpp
    include/indri/RegionAllocator.hpp
    include/indri/RelevanceModel.hpp
    include/indri/Repository.hpp
    include/indri/RepositoryLoadThread.hpp
    include/indri/RepositoryMaintenanceThread.hpp
    include/indri/RMExpander.hpp
    include/indri/RVLCompressStream.hpp
    include/indri/RVLDecompressStream.hpp
    include/indri/ScopedLock.hpp
    include/indri/ScopedMonitor.hpp
    include/indri/ScoredExtentAccumulator.hpp
    include/indri/ScoredExtentResult.hpp
    include/indri/SequentialReadBuffer.hpp
    include/indri/SequentialWriteBuffer.hpp
    include/indri/ShrinkageBeliefNode.hpp
    include/indri/SimpleCopier.hpp
    include/indri/SkippingCapableNode.hpp
    include/indri/SmoothingAnnotatorWalker.hpp
    include/indri/SnippetBuilder.hpp
    include/indri/StemmerFactory.hpp
    include/indri/StopperTransformation.hpp
    include/indri/StopStructureRemover.hpp
    include/indri/SumNode.hpp
    include/indri/Tag.hpp
    include/indri/TagDocumentIterator.hpp
    include/indri/TagEvent.hpp
    include/indri/TagExtent.hpp
    include/indri/TaggedDocumentIterator.hpp
    include/indri/TaggedTextParser.hpp
    include/indri/TagList.hpp
    include/indri/TermBitmap.hpp
    include/indri/TermData.hpp
    include/indri/TermExtent.hpp
    include/indri/TermFieldStatistics.hpp
    include/indri/TermFrequencyBeliefNode.hpp
    include/indri/TermList.hpp
    include/indri/TermListFileIterator.hpp
    include/indri/TermRecorder.hpp
    include/indri/TermScoreFunction.hpp
    include/indri/TermScoreFunctionFactory.hpp
    include/indri/TermTranslator.hpp
    include/indri/TextDocumentExtractor.hpp
    include/indri/TextParser.hpp
    include/indri/TextTokenizer.hpp
    include/indri/TFIDFExpander.hpp
    include/indri/TFIDFTermScoreFunction.hpp
    include/indri/Thread.hpp
    include/indri/TokenizedDocument.hpp
    include/indri/TokenizerFactory.hpp
    include/indri/Transformation.hpp
    include/indri/TreePrinterWalker.hpp
    include/indri/TwoStageTermScoreFunction.hpp
    include/indri/uint64comp.hpp
    include/indri/UnnecessaryNodeRemoverCopier.hpp
    include/indri/UnorderedWindowNode.hpp
    include/indri/Unpacker.hpp
    include/indri/UnparsedDocument.hpp
    include/indri/URLTextAnnotator.hpp
    include/indri/UTF8CaseNormalizationTransformation.hpp
    include/indri/UTF8Transcoder.hpp
    include/indri/UtilityThread.hpp
    include/indri/VocabularyIterator.hpp
    include/indri/Walker.hpp
    include/indri/WARCDocumentIterator.hpp
    include/indri/WeightedAndNode.hpp
    include/indri/WeightedExtentOrNode.hpp
    include/indri/WeightedSumNode.hpp
    include/indri/WeightFoldingCopier.hpp
    include/indri/WordDocumentExtractor.hpp
    include/indri/WPlusNode.hpp
    include/indri/WriterLockable.hpp
    include/indri/XMLNode.hpp
    include/indri/XMLReader.hpp
    include/indri/XMLWriter.hpp
    irtk/QueryStats.cpp
    irtk/QueryStats.hpp
    lemur/include/lemur/common_headers.hpp
    lemur/include/lemur/Exception.hpp
    lemur/include/lemur/fileio.h
    lemur/include/lemur/HarvestSortMerge.hpp
    lemur/include/lemur/IndexTypes.hpp
    lemur/include/lemur/integer_types.h
    lemur/include/lemur/InvFPTypes.hpp
    lemur/include/lemur/key_consts.h
    lemur/include/lemur/keydef.h
    lemur/include/lemur/keyerr.h
    lemur/include/lemur/keyfile.h
    lemur/include/lemur/Keyfile.hpp
    lemur/include/lemur/keyprint.h
    lemur/include/lemur/keyref.h
    lemur/include/lemur/kf6ref.h
    lemur/include/lemur/lemur-compat.hpp
    lemur/include/lemur/lemur-platform.h
    lemur/include/lemur/RVLCompress.hpp
    lemur/include/lemur/SHA1.hpp
    lemur/include/lemur/SortMergeTextFiles.hpp
    lemur/include/lemur/string-set.h
    lemur/src/fileio.c
    lemur/src/fn_f.c
    lemur/src/HarvestSortMerge.cpp
    lemur/src/Keyfile.cpp
    lemur/src/keyfilecode.c
    lemur/src/keyfilecompress.c
    lemur/src/keyprint.c
    lemur/src/lemur-compat.cpp
    lemur/src/RVLCompress.cpp
    lemur/src/SHA1.cpp
    lemur/src/SortMergeTextFiles.cpp
    lemur/src/string-set.c
    src/AnchorTextHarvester.cpp
    src/Annotator.cpp
    src/Arabic_Stemmer_utf8.cpp
    src/ArabicStemmerTransformation.cpp
    src/BooleanAndNode.cpp
    src/BulkTree.cpp
    src/CachedFrequencyBeliefNode.cpp
    src/CombinedVocabularyIterator.cpp
    src/Combiner.cpp
    src/CompressedCollection.cpp
    src/ContextCountAccumulator.cpp
    src/ContextInclusionAndNode.cpp
    src/ContextSimpleCountAccumulator.cpp
    src/Copier.cpp
    src/DeletedDocumentList.cpp
    src/DirectoryIterator.cpp
    src/DiskDocExtentListIterator.cpp
    src/DiskDocListFileIterator.cpp
    src/DiskDocListIterator.cpp
    src/DiskDocumentDataIterator.cpp
    src/DiskFrequentVocabularyIterator.cpp
    src/DiskIndex.cpp
    src/DiskKeyfileVocabularyIterator.cpp
    src/DiskTermListFileIterator.cpp
    src/DocExtentListMemoryBuilder.cpp
    src/DocExtentListMemoryBuilderIterator.cpp
    src/DocListIteratorNode.cpp
    src/DocListMemoryBuilder.cpp
    src/DocListMemoryBuilderIterator.cpp
    src/DocumentIteratorFactory.cpp
    src/DocumentStructure.cpp
    src/DocumentStructureHolderNode.cpp
    src/DocumentVector.cpp
    src/ExtentAndNode.cpp
    src/ExtentChildNode.cpp
    src/ExtentDescendantNode.cpp
    src/ExtentEnforcementNode.cpp
    src/ExtentInsideNode.cpp
    src/ExtentOrNode.cpp
    src/ExtentParentNode.cpp
    src/ExtentRestrictionNode.cpp
    src/FieldBetweenNode.cpp
    src/FieldEqualsNode.cpp
    src/FieldGreaterNode.cpp
    src/FieldIteratorNode.cpp
    src/FieldLessNode.cpp
    src/FieldWildcardNode.cpp
    src/File.cpp
    src/FileClassEnvironmentFactory.cpp
    src/FileTreeIterator.cpp
    src/FilterRejectNode.cpp
    src/FilterRequireNode.cpp
    src/FixedPassageNode.cpp
    src/HTMLParser.cpp
    src/IndexEnvironment.cpp
    src/IndexWriter.cpp
    src/IndriTimer.cpp
    src/InferenceNetwork.cpp
    src/InferenceNetworkBuilder.cpp
    src/KrovetzStemmer.cpp
    src/KrovetzStemmerTransformation.cpp
    src/LengthPriorNode.cpp
    src/ListAccumulator.cpp
    src/ListBeliefNode.cpp
    src/LocalQueryServer.cpp
    src/MboxDocumentIterator.cpp
    src/MemoryDocumentDataIterator.cpp
    src/MemoryIndex.cpp
    src/MemoryIndexTermListFileIterator.cpp
    src/NestedExtentInsideNode.cpp
    src/NestedListBeliefNode.cpp
    src/NetworkMessageStream.cpp
    src/NetworkServerProxy.cpp
    src/NetworkServerStub.cpp
    src/NexiLexer.cpp
    src/NexiParser.cpp
    src/NormalizationTransformation.cpp
    src/NotNode.cpp
    src/NullListNode.cpp
    src/NullScorerNode.cpp
    src/OfficeHelper.cpp
    src/OffsetAnnotationAnnotator.cpp
    src/OffsetMetadataAnnotator.cpp
    src/OrderedWindowNode.cpp
    src/OrNode.cpp
    src/Packer.cpp
    src/PageRank.cpp
    src/Parameters.cpp
    src/ParserFactory.cpp
    src/Path.cpp
    src/PDFDocumentExtractor.cpp
    src/PlusNode.cpp
    src/PonteExpander.cpp
    src/Porter_Stemmer.cpp
    src/PorterStemmerTransformation.cpp
    src/PowerPointDocumentExtractor.cpp
    src/PriorFactory.cpp
    src/PriorListIterator.cpp
    src/PriorNode.cpp
    src/QueryAnnotation.cpp
    src/QueryEnvironment.cpp
    src/QueryExpander.cpp
    src/QueryLexer.cpp
    src/QueryParser.cpp
    src/QueryParserFactory.cpp
    src/QueryStopper.cpp
    src/ReformulateQuery.cpp
    src/RelevanceModel.cpp
    src/Repository.cpp
    src/RepositoryLoadThread.cpp
    src/RepositoryMaintenanceThread.cpp
    src/RMExpander.cpp
    src/ShrinkageBeliefNode.cpp
    src/SnippetBuilder.cpp
    src/StemmerFactory.cpp
    src/StopperTransformation.cpp
    src/StopStructureRemover.cpp
    src/TaggedDocumentIterator.cpp
    src/TaggedTextParser.cpp
    src/TermFrequencyBeliefNode.cpp
    src/TermScoreFunctionFactory.cpp
    src/TextDocumentExtractor.cpp
    src/TextParser.cpp
    src/TextTokenizer.cpp
    src/TFIDFExpander.cpp
    src/TFIDFTermScoreFunction.cpp
    src/Thread.cpp
    src/TokenizerFactory.cpp
    src/uint64comp.cpp
    src/UnorderedWindowNode.cpp
    src/Unpacker.cpp
    src/UnpackerInternal.cpp
    src/UTF8CaseNormalizationTransformation.cpp
    src/UTF8Transcoder.cpp
    src/UtilityThread.cpp
    src/Walker.cpp
    src/WARCDocumentIterator.cpp
    src/WeightedAndNode.cpp
    src/WeightedExtentOrNode.cpp
    src/WeightedSumNode.cpp
    src/WordDocumentExtractor.cpp
    src/WPlusNode.cpp
    src/XMLNode.cpp
    src/XMLReader.cpp
    src/XMLWriter.cpp
    xpdf/include/about-text.h
    xpdf/include/aconf-win32.h
    xpdf/include/aconf.h
    xpdf/include/aconf2.h
    xpdf/include/Annot.h
    xpdf/include/Array.h
    xpdf/include/BuiltinFont.h
    xpdf/include/BuiltinFontTables.h
    xpdf/include/Catalog.h
    xpdf/include/CharCodeToUnicode.h
    xpdf/include/CharTypes.h
    xpdf/include/CMap.h
    xpdf/include/CompactFontTables.h
    xpdf/include/config.h
    xpdf/include/Decrypt.h
    xpdf/include/Dict.h
    xpdf/include/Error.h
    xpdf/include/ErrorCodes.h
    xpdf/include/FoFiBase.h
    xpdf/include/FoFiEncodings.h
    xpdf/include/FoFiTrueType.h
    xpdf/include/FoFiType1.h
    xpdf/include/FoFiType1C.h
    xpdf/include/FontEncodingTables.h
    xpdf/include/Function.h
    xpdf/include/gfile.h
    xpdf/include/Gfx.h
    xpdf/include/GfxFont.h
    xpdf/include/GfxState.h
    xpdf/include/GHash.h
    xpdf/include/GList.h
    xpdf/include/GlobalParams.h
    xpdf/include/gmem.h
    xpdf/include/GMutex.h
    xpdf/include/GString.h
    xpdf/include/gtypes.h
    xpdf/include/JArithmeticDecoder.h
    xpdf/include/JBIG2Stream.h
    xpdf/include/JPXStream.h
    xpdf/include/Lexer.h
    xpdf/include/Link.h
    xpdf/include/NameToCharCode.h
    xpdf/include/NameToUnicodeTable.h
    xpdf/include/Object.h
    xpdf/include/Outline.h
    xpdf/include/OutputDev.h
    xpdf/include/Page.h
    xpdf/include/parseargs.h
    xpdf/include/Parser.h
    xpdf/include/PDFDoc.h
    xpdf/include/PDFDocEncoding.h
    xpdf/include/PreScanOutputDev.h
    xpdf/include/PSOutputDev.h
    xpdf/include/PSTokenizer.h
    xpdf/include/SecurityHandler.h
    xpdf/include/Stream-CCITT.h
    xpdf/include/Stream.h
    xpdf/include/TextOutputDev.h
    xpdf/include/UnicodeMap.h
    xpdf/include/UnicodeMapTables.h
    xpdf/include/UnicodeTypeTable.h
    xpdf/include/UTF8.h
    xpdf/include/XRef.h
    xpdf/src/Annot.cc
    xpdf/src/Array.cc
    xpdf/src/BuiltinFont.cc
    xpdf/src/BuiltinFontTables.cc
    xpdf/src/Catalog.cc
    xpdf/src/CharCodeToUnicode.cc
    xpdf/src/CMap.cc
    xpdf/src/Decrypt.cc
    xpdf/src/Dict.cc
    xpdf/src/Error.cc
    xpdf/src/FoFiBase.cc
    xpdf/src/FoFiEncodings.cc
    xpdf/src/FoFiTrueType.cc
    xpdf/src/FoFiType1.cc
    xpdf/src/FoFiType1C.cc
    xpdf/src/FontEncodingTables.cc
    xpdf/src/Function.cc
    xpdf/src/gfile.cc
    xpdf/src/Gfx.cc
    xpdf/src/GfxFont.cc
    xpdf/src/GfxState.cc
    xpdf/src/GHash.cc
    xpdf/src/GList.cc
    xpdf/src/GlobalParams.cc
    xpdf/src/gmem.cc
    xpdf/src/GString.cc
    xpdf/src/JArithmeticDecoder.cc
    xpdf/src/JBIG2Stream.cc
    xpdf/src/JPXStream.cc
    xpdf/src/Lexer.cc
    xpdf/src/Link.cc
    xpdf/src/NameToCharCode.cc
    xpdf/src/Object.cc
    xpdf/src/Outline.cc
    xpdf/src/OutputDev.cc
    xpdf/src/Page.cc
    xpdf/src/parseargs.c
    xpdf/src/PDFDoc.cc
    xpdf/src/PDFDocEncoding.cc
    xpdf/src/PSOutputDev.cc
    xpdf/src/PSTokenizer.cc
    xpdf/src/SecurityHandler.cc
    xpdf/src/Stream.cc
    xpdf/src/TextOutputDev.cc
    xpdf/src/UnicodeMap.cc
    xpdf/src/UnicodeTypeTable.cc
    xpdf/src/xpdfParser.cc
    xpdf/src/XRef.cc
    zlib/include/crc32.h
    zlib/include/deflate.h
    zlib/include/inffast.h
    zlib/include/inffixed.h
    zlib/include/inflate.h
    zlib/include/inftrees.h
    zlib/include/trees.h
    zlib/include/zconf.h
    zlib/include/zlib.h
    zlib/include/zutil.h
    zlib/src/adler32.c
    zlib/src/compress.c
    zlib/src/crc32.c
    zlib/src/deflate.c
    zlib/src/gzio.c
    zlib/src/infback.c
    zlib/src/inffast.c
    zlib/src/inflate.c
    zlib/src/inftrees.c
    zlib/src/trees.c
    zlib/src/uncompr.c
    zlib/src/zutil.c)

add_executable(indri ${SOURCE_FILES})